--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,17 +1,39 @@
 .button {
-    /* 按钮样式*/
-    width: 100px;
-    height: 30px;
-    line-height: 15px;
-    background-color: rgb(255, 51, 0);
-    margin: 0 auto;
-    border-radius: 10px;
+    display: inline-block;
+    border-radius: 4px;
+    background-color: #f4511e;
+    border: none;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 14px;
+    padding: 5px;
+    width: 200px;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 5px;
 }
 
-.floatButton {
-    position: fixed;
-    bottom: 40px;
-    left: 0;
+.button span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+}
+
+.button span:after {
+    content: '»';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+}
+
+.button:hover span {
+    padding-right: 25px;
+}
+
+.button:hover span:after {
+    opacity: 1;
     right: 0;
-    margin: 0 auto;
 }
